The 'tbuf' config was not being set in check_window, internal default was used.

--- a/docs/tpwindow.org
+++ b/docs/tpwindow.org
@@ -67,6 +67,7 @@ Which displays:
               "type": "PUSH"
           }
       },
+      "tbuf": 3000,
       "toffset": 0,
       "tspan": 150000
   }
