Add example JSON config.

--- a/docs/tpsorted.org
+++ b/docs/tpsorted.org
@@ -12,13 +12,43 @@ messages and sinks.  In between it provides these functions:
 A ~TPSorted~ is constructed with a configuration object with these attributes:
 
 - tardy :: a time in msec.  Any input later than this time relative to recenbt messages from other streams will be considered "tardy".
-- input :: specification of the proxy's input sockets.  It holds a "socket" attribute which follows the same schema as ~TPReceiver~
+- input :: specification of the proxy's input sockets.  It holds a "socket" attribute which follows the same schema as ~TPReceiver~.  *NOTE* one input address per distinct stream is needed.
 - output :: ibid for the specification of the proxy's output sockets.
 
 Optional settings:
 
 - tardy_policy :: if set to ~"send"~ then tardy input will be sent to output.  *Warning* this means the strict time order of output is violated.  Default is to drop tardy input.
 
+An example JSON configuration string with 5 input streams:
+
+#+BEGIN_SRC json
+  {
+      "input": {
+          "socket": {
+              "bind": [
+                  "tcp://127.0.0.1:7609",
+                  "tcp://127.0.0.1:7607",
+                  "tcp://127.0.0.1:7605",
+                  "tcp://127.0.0.1:7603",
+                  "tcp://127.0.0.1:7601"
+              ],
+              "hwm": 1000,
+              "type": "PULL"
+          }
+      },
+      "output": {
+          "socket": {
+              "connect": [
+                  "tcp://127.0.0.1:6666"
+              ],
+              "hwm": 1000,
+              "type": "PUSH"
+          }
+      },
+      "tardy": 1000
+  }
+
+#+END_SRC
 
 * Algorithm
 
